--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>${artifactId}</name>
+    <name>${project.artifactId}</name>
     <description>Basic mathematical tool-kit for complex mathematical operations and algorithms.</description>
     <inceptionYear>2017</inceptionYear>
 
